# pib-eyes-facetrack

./: Dockerfile  Dockerfile.camera  Dockerfile.oakd  README.md  docker-compose.yml  run-oakd.sh  run-wayland.sh  run.sh
ros2_ws/src/camera/: Dockerfile  package.xml
ros2_ws/src/camera/oak_d_lite/: stereo.py
ros2_ws/src/datatypes/: CMakeLists.txt  package.xml
ros2_ws/src/datatypes/srv/: GetCameraImage.srv
ros2_ws/src/eyes_face_follow/: package.xml  setup.cfg  setup.py
ros2_ws/src/eyes_face_follow/eyes_face_follow/: face_follow.py
ros2_ws/src/oakd_face_publisher/: package.xml  setup.cfg  setup.py
ros2_ws/src/oakd_face_publisher/oakd_face_publisher/: face_publisher.py
ros2_ws/src/vision_msgs/: CMakeLists.txt  package.xml
