<?xml version="1.0"?>
<package format="3">
  <name>oakd_face_publisher</name>
  <version>0.0.1</version>
  <description>On-device face detection for OAK-D Lite and ROS2 publisher.</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
</package>
